# LOTUSim-Xdyn

./: ..gitlab-ci.yml  .devcontainer.json  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Dockerfile  Dockerfile.gdb  Dockerfile.vscode.devcontainer  Makefile  README.md  contributors  gdb.sh  ninja_debian.sh  ninja_debug.sh  ninja_windows.sh  run_all_tests_debian.sh  run_all_tests_valgrind.sh  run_all_tests_windows.sh  yaml-cpp-CMakeLists.txt
code/: .clang-format  .gitmodules  CMakeLists.txt  Dockerfile.vscode.devcontainer  Doxyfile.in  DoxygenLayout.in  generate_stb_header.sh  make_module.sh
code/binary_stl_data/: CMakeLists.txt  generate_test_ship.hpp
code/boost_program_options_descriptions/: CMakeLists.txt
code/cmake/: CMakeCompilationOptions.cmake  CMakeCustomTargets.cmake  CMakeDocumentation.cmake  CMakeEigen.cmake  CMakeGMock.cmake  CMakeGRPC.cmake  CMakePack.cmake  CMakeProtoBuf.cmake  GetGitRevisionDescription.cmake
code/core/: BlockedDOF.hpp  BodyBuilder.cpp  BodyBuilder.hpp  BodyStates.cpp  BodyStates.hpp  BodyWithSurfaceForces.hpp  BodyWithoutSurfaceForces.cpp  BodyWithoutSurfaceForces.hpp  CMakeLists.txt  DefaultSurfaceElevation.cpp  DefaultSurfaceElevation.hpp  EmergedSurfaceForceModel.hpp  EnvironmentAndFrames.cpp  EnvironmentAndFrames.hpp  ForceModel.hpp  ImmersedSurfaceForceModel.hpp  Res.hpp  Sim.hpp  SimulatorBuilder.cpp  SimulatorBuilder.hpp  SurfaceElevationBuilder.hpp  SurfaceElevationFromWaves.cpp  SurfaceElevationFromWaves.hpp  SurfaceElevationInterface.cpp  SurfaceElevationInterface.hpp  SurfaceForceModel.hpp  WaveModelBuilder.hpp
code/environment_models/: Airy.cpp  Airy.hpp  BretschneiderSpectrum.cpp  BretschneiderSpectrum.hpp  CMakeLists.txt  Cos2sDirectionalSpreading.cpp  Cos2sDirectionalSpreading.hpp  DefaultWindModel.cpp  DefaultWindModel.hpp  DiracDirectionalSpreading.cpp  DiracDirectionalSpreading.hpp  DiracSpectralDensity.cpp  DiracSpectralDensity.hpp  DiscreteDirectionalWaveSpectrum.cpp  DiscreteDirectionalWaveSpectrum.hpp  JonswapSpectrum.cpp  JonswapSpectrum.hpp  PiersonMoskowitzSpectrum.hpp  PowerLawWindVelocityProfile.cpp  Stretching.cpp  Stretching.hpp  SumOfWaveDirectionalSpreadings.cpp  SumOfWaveDirectionalSpreadings.hpp  SumOfWaveSpectralDensities.hpp  UniformWindVelocityProfile.cpp  WaveDirectionalSpreading.cpp  WaveModel.cpp  WaveModel.hpp  WaveNumberFunctor.hpp  WaveSpectralDensity.cpp  WaveSpectralDensity.hpp  WindMeanVelocityProfile.hpp  WindModel.cpp  WindModel.hpp  YamlSpectraInput.cpp  discretize.cpp  discretize.hpp
code/exceptions/: CMakeLists.txt
code/executables/: CMakeLists.txt  CosimulationServiceImpl.cpp  CosimulationServiceImpl.hpp  ErrorReporter.cpp  ErrorReporter.hpp  JSONWebSocketServer.hpp  ModelExchangeServiceImpl.cpp  ModelExchangeServiceImpl.hpp  build_observers_description.cpp  build_observers_description.hpp  convert_stl_files_to_code.cpp  display_command_line_arguments.cpp  gRPCChecks.hpp  generate_stl_examples.cpp  generate_yaml_examples.cpp  parse_XdynCommandLineArguments.cpp  parse_XdynForCSCommandLineArguments.cpp  test_hs.cpp  test_orbital_velocities_and_dynamic_pressures.cpp  xdyn_for_me.cpp  xdyn_grpc_airy.cpp
code/external_data_structures/: AbstractStates.hpp  CMakeLists.txt  YamlAngle.cpp  YamlAnglesOutput.cpp  YamlBody.cpp  YamlBody.hpp  YamlController.cpp  YamlCoordinates.cpp  YamlDynamics.cpp  YamlDynamics.hpp  YamlDynamics6x6Matrix.cpp  YamlEnvironmentalConstants.cpp  YamlForcesAndTorquesOutput.cpp  YamlGRPC.cpp  YamlGRPC.hpp  YamlModel.cpp  YamlOutput.cpp  YamlPoint.cpp  YamlPoint.hpp  YamlPosition.cpp  YamlPosition.hpp  YamlPositionOutput.cpp  YamlRAO.cpp  YamlRAO.hpp  YamlRadiationDamping.cpp  YamlRadiationDamping.hpp  YamlRotation.cpp  YamlSimServerInputs.cpp  YamlSimServerInputs.hpp  YamlSimulatorInput.cpp  YamlSimulatorInput.hpp  YamlSpeed.cpp  YamlState.cpp  YamlState.hpp  YamlTimeSeries.cpp  YamlWaveModelInput.cpp  YamlWaveModelInput.hpp  YamlWaveOutput.cpp
code/external_file_formats/: CMakeLists.txt  boost_spirit_hdb_adapters.hpp  hdb_to_ast.cpp  stl_io_hdf5.cpp  stl_io_hdf5.hpp  stl_reader.cpp  stl_reader.hpp  stl_writer.cpp  stl_writer.hpp
code/fmi/: CMakeLists.txt  EmitFMIXml.cpp  FMI.cpp  FMI.hpp  FMIXml.cpp  ParseFMIXml.hpp  Sha.hpp  generate_fmi_xml.cpp  get_sha.cpp  mk_fmi.py
code/force_models/: AbstractRaoForceModel.cpp  AbstractRaoForceModel.hpp  AbstractWageningen.cpp  AbstractWageningen.hpp  AeroPolarForceModel.cpp  AeroPolarForceModel.hpp  CMakeLists.txt  ConstantForceModel.cpp  ConstantForceModel.hpp  DampingForceModel.cpp  DampingForceModel.hpp  DiffractionForceModel.hpp  ExactHydrostaticForceModel.cpp  ExactHydrostaticForceModel.hpp  FastHydrostaticForceModel.cpp  FlettnerRotorForceModel.cpp  FlettnerRotorForceModel.hpp  FroudeKrylovForceModel.cpp  FroudeKrylovForceModel.hpp  GMForceModel.cpp  GMForceModel.hpp  GravityForceModel.cpp  HoltropMennenForceModel.cpp  HoltropMennenForceModel.hpp  HydroPolarForceModel.cpp  HydroPolarForceModel.hpp  KtKqForceModel.cpp  KtKqForceModel.hpp  LinearDampingForceModel.cpp  LinearHydrostaticForceModel.cpp  LinearHydrostaticForceModel.hpp  LinearStiffnessForceModel.cpp  LinearStiffnessForceModel.hpp  MMGManeuveringForceModel.cpp  MMGManeuveringForceModel.hpp  ManeuveringForceModel.cpp  ManeuveringForceModel.hpp  ManeuveringInternal.cpp  ManeuveringInternal.hpp  PhaseModuleRAOEvaluator.cpp  (+16 more)
code/get_git_sha/: CMakeLists.txt  get_git_sha.c
code/grpc/: AiryGRPC.cpp  CMakeLists.txt  GRPCForceModel.cpp  GRPCForceModel.hpp  GrpcControllerInterface.cpp  GrpcControllerInterface.hpp  SurfaceElevationFromGRPC.cpp  SurfaceElevationFromGRPC.hpp  ToGRPC.cpp  ToGRPC.hpp  ToGRPCCommon.cpp  ToGRPCCommon.hpp  controller.proto  cosimulation.proto  grpc_error_outputter.hpp  model_exchange.proto
code/gz_curves/: CMakeLists.txt  GZCurve.cpp  GZTypes.hpp  ResultantForceComputer.cpp  ResultantForceComputer.hpp  gz_newton_raphson.cpp  make_sim_for_GZ.cpp
code/hdb_interpolators/: CMakeLists.txt  HDBParser.cpp  History.cpp  History.hpp  HydroDBParser.cpp  PrecalParser.cpp  PrecalParserHelper.cpp  (+4 more)
(+1504 files in other folders)
